// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Url renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp hjSYqF"
      disabled={true}
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <input
        className="sc-jSPclO fBRZSW"
        disabled={true}
        placeholder=" "
        type="url"
        value="https://sportsbet.io"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp hjSYqF"
      disabled={true}
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <input
        className="sc-jSPclO hUvnrR"
        disabled={true}
        placeholder=" "
        type="url"
        value="https://sportsbet.io"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp hjSYqF"
      disabled={true}
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO cbdmRr"
          disabled={true}
          placeholder=" "
          type="url"
          value="https://sportsbet.io"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <input
        className="sc-jSPclO hzEpJE"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-bKOxAn JIYmc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <input
        className="sc-jSPclO iSsDGf"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-bKOxAn JIYmc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO exYPQF"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-bKOxAn JIYmc"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <input
        className="sc-jSPclO fBRZSW"
        placeholder=" "
        readOnly={true}
        type="url"
        value="https://sportsbet.io"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <input
        className="sc-jSPclO hUvnrR"
        placeholder=" "
        readOnly={true}
        type="url"
        value="https://sportsbet.io"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO cbdmRr"
          placeholder=" "
          readOnly={true}
          type="url"
          value="https://sportsbet.io"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <input
        className="sc-jSPclO fBRZSW"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <input
        className="sc-jSPclO hUvnrR"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO cbdmRr"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <input
        className="sc-jSPclO fBRZSW"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <input
        className="sc-jSPclO hUvnrR"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO cbdmRr"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-jSPclO fBRZSW"
        dir="rtl"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-jSPclO hUvnrR"
        dir="rtl"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO cbdmRr"
          dir="rtl"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-gbFqDM jHsxVm"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <input
        className="sc-jSPclO fBRZSW"
        placeholder="medium"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <input
        className="sc-jSPclO hUvnrR"
        placeholder="large"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh cacemr"
      >
        <input
          className="sc-jSPclO ipVsRy"
          placeholder="xlarge"
          type="url"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        medium
      </label>
      <input
        className="sc-jSPclO IYUVx"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <label
        className="sc-eEXVIU gehFDh"
      >
        large
      </label>
      <input
        className="sc-jSPclO dfTCla"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-hMtawp icjkgP"
    >
      <div
        className="sc-jjavrh kXEagA"
      >
        <input
          className="sc-jSPclO cbdmRr"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-gbFqDM fiOBHp"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-bKOxAn dpikAc"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
